fix: Implementa e apresenta array de autores

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,16 @@ body, .app {
   color: #999;
 }
 
+.authors-list{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.authors-list li{
+  text-align: left;
+  padding: 0;
+}
+
 .book-top {
   position: relative;
   height: 200px;
